--- a/CSCI340Databases/Project3/app/templates/login.html
+++ b/CSCI340Databases/Project3/app/templates/login.html
@@ -10,4 +10,9 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+
+    <div class=page>
+      <h1>Display Table</h1>
+        {{ table|safe }}
+    </div>
 {% endblock %}
