changed some names

--- a/CSCI340Databases/Project3/app/templates/base.html
+++ b/CSCI340Databases/Project3/app/templates/base.html
@@ -13,7 +13,7 @@
         <div>
             Databases - Project 3:
             <a href="/index">Home</a>
-            <a href="/login">Login</a>
+            <a href="/runscript">Run Scripts</a>
         </div>
         {% block content %}{% endblock %}
         <hr>
