--- a/CSCI340Databases/Project3/app/templates/runscript.html
+++ b/CSCI340Databases/Project3/app/templates/runscript.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Run Your Script on the Cooking Database!</h1>
+    <h1>Run Your Script on the DB Overflow Database!</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
