--- a/CSCI340Databases/Project3/app/templates/base.html
+++ b/CSCI340Databases/Project3/app/templates/base.html
@@ -6,7 +6,7 @@
         <title>Project 3</title>
         {% endif %}
 
-        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> -->
         <link href="../static/styles.css" rel="stylesheet">
     </head>
     <body>
