--- a/CSCI340Databases/Project3/app/templates/login.html
+++ b/CSCI340Databases/Project3/app/templates/login.html
@@ -8,7 +8,7 @@
             {{ form.script.label }}<br>
             {{ form.script(size=32) }}
         </p>
-        <p>{{ form.submit() }}</p>
+        <p>{{ form.submit(class_="submitButton") }}</p>
     </form>
 
     <div class=page>
