started creation of other pages

--- a/CSCI340Databases/Project3/app/templates/base.html
+++ b/CSCI340Databases/Project3/app/templates/base.html
@@ -7,13 +7,15 @@
         {% endif %}
 
         <!-- <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-        <link href="../static/styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body>
         <div>
             Databases - Project 3:
             <a href="/index">Home</a>
             <a href="/runscript">Run Scripts</a>
+            <a href="/questions">All Questions</a>
+            <a href="/askquestion">Ask a Question</a>
         </div>
         {% block content %}{% endblock %}
         <hr>
