--- a/CSCI340Databases/Project3/app/static/styles.css
+++ b/CSCI340Databases/Project3/app/static/styles.css
@@ -15,21 +15,33 @@ table.dataframe, .dataframe th, .dataframe td {
 }
 
 .submitButton {
-	background-color:##377ba8;
-	border-radius:24px;
-	border:1px solid #377ba8;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:"Lucida Sans Unicode";
-	font-size:17px;
-	padding:10px 25px;
-	text-decoration:none;
-}
+   border-top: 1px solid #96d1f8;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+   background: -o-linear-gradient(top, #3e779d, #65a9d7);
+   padding: 4.5px 9px;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 13px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
 .submitButton:hover {
-	background-color:#377ba8;
-}
+   border-top-color: #28597a;
+   background: #28597a;
+   color: #ccc;
+   }
 .submitButton:active {
-	position:relative;
-	top:1px;
-}
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
