--- a/CSCI340Databases/Project3/app/templates/askquestion.html
+++ b/CSCI340Databases/Project3/app/templates/askquestion.html
@@ -5,14 +5,14 @@
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
-            {{ form.script.label }}<br>
-            {{ form.script(size=32) }}
+            {{ form.question.label }}<br>
+            {{ form.question(size=32) }}
+        </p>
+        <p>
+            {{ form.userid.label}}<br>
+            {{ form.userid(size=32) }}
         </p>
         <p>{{ form.submit(class_="submitButton") }}</p>
     </form>
 
-    <div class=page>
-      <h1>Display Table</h1>
-        {{ table|safe }}
-    </div>
 {% endblock %}
