Added aggregate information base page, edited home page text

--- a/CSCI340Databases/Project3/app/templates/base.html
+++ b/CSCI340Databases/Project3/app/templates/base.html
@@ -16,6 +16,8 @@
             <a href="/runscript">Run Scripts</a>
             <a href="/questions">All Questions</a>
             <a href="/askquestion">Ask a Question</a>
+            <a href="/answerquestion">Answer a Question</a>
+            <a href="/aggregateinfo">Aggregate Info</a>
         </div>
         {% block content %}{% endblock %}
         <hr>
