--- a/CSCI340Databases/Project3/app/templates/index.html
+++ b/CSCI340Databases/Project3/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ user.username }}!</h1>
+    <h1>Hi user. Welcome to the database on databases UI!</h1>
 {% endblock %}
