--- a/CSCI340Databases/Project3/app/templates/answerquestion.html
+++ b/CSCI340Databases/Project3/app/templates/answerquestion.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Ask a Question</h1>
+    <h1>Answer a Question</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -10,7 +10,7 @@
         </p>
         <p>
             {{ form.answer.label }} <br>
-            {{ form.questionid(size=32) }}
+            {{ form.answer(size=32) }}
         </p>
         <p>
             {{ form.userid.label}}<br>
