--- a/COMM232A_WebCommunication/HoughtonEsports/assets/styles.css
+++ b/COMM232A_WebCommunication/HoughtonEsports/assets/styles.css
@@ -137,14 +137,16 @@ h2 {
 } */
 
 .content {
+    margin-top: 50px;
     display: grid;
     grid-template-columns: 50% 50%;
-    width:100vw;
-    height: 100vw;
+    width:100%;
+    height: 100%;
 }
 
 .grid-item {
     margin-right: 50px;
+    margin-left: 50px;
 }
 
 .grid-item h2  {
