changed overwatch potm pic, removed top margins for content

--- a/COMM232A_WebCommunication/HoughtonEsports/assets/game_page.css
+++ b/COMM232A_WebCommunication/HoughtonEsports/assets/game_page.css
@@ -124,7 +124,7 @@ h2 {
 }
 
 .content {
-    margin-top: 50px;
+    /* margin-top: 50px; */
     display: grid;
     grid-template-columns: 50% 50%;
     width:100%;
