--- a/COMM232A_WebCommunication/HoughtonEsports/assets/game_page.css
+++ b/COMM232A_WebCommunication/HoughtonEsports/assets/game_page.css
@@ -124,7 +124,6 @@ h2 {
 }
 
 .content {
-    /* margin-top: 50px; */
     display: grid;
     grid-template-columns: 50% 50%;
     width:100%;
@@ -138,14 +137,16 @@ h2 {
 .grid-item-text {
     margin-left: 50px;
     margin-right: 50px;
-    vertical-align: middle;
+    font-size: 20px;
+    /* vertical-align: middle; */
 }
 
-.grid-item-text h2  {
+.grid-item-text h2 {
     text-align: center;
     border-bottom-style: solid;
     border-width: thin;
 }
+
 
 footer {
     width: 100%;
